# scion-sui-deploy

./: .gitignore  README.md  config.ini  config.yml-sample  hosts-sample-latitude-s2-small-regional-edge.yml  hosts_template.yml  mysten-tests.yml  pyproject.toml  validator_wg_host_template.yml
.github/: CODEOWNERS
CloudEdge/: 50-scionsui.yaml  edge.json  setup-latitude-host.sh  start-edge-instance.sh  start-ubuntu-instance.sh
ansible/: bare_metal_edge_host.yml  edge.yml  edge_nodes.yml  hosts  hosts.yml  playbook.yml  requirements.yml  shared-edge.yml  vars.yml  wireguard.yml
ansible/files/: advertised_ip_ranges.yml
ansible/filter_plugins/: custom_filters.py
ansible/roles/deploy_edge_metal/defaults/: main.yml
ansible/roles/deploy_edge_metal/handlers/: main.yml
ansible/roles/deploy_edge_metal/meta/: argument_specs.yml
ansible/roles/deploy_edge_metal/tasks/: init.yml  interface-virtio.yml  interface.yml  main.yml  network.yml  volume.yml
ansible/roles/deploy_edge_metal/templates/: 99-netplan-scionwan.yaml.j2  bridge_toggle.sh.j2
ansible/roles/deploy_edge_metal/vars/: main.yml
ansible/roles/edge/defaults/: main.yml
ansible/roles/edge/files/: appliances.json  context.json
ansible/roles/edge/handlers/: main.yml
ansible/scripts/: generate_defaults.py
ansible/tasks/: prepare_network.yml  prepare_volume.yml  virtualize_iface.yml
contrib/: setup-edge.txt
netplan/: 99-edge-netplan.yaml
network-configs/: 55-scionwan.yaml  netplan-55-scionwan.yaml
support/: getValidatorList.sh  setup-latitude-host.sh  start-ubuntu-instance.sh
(+26 files in other folders)
